bk_ida/gccida/g2/recog_32
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46024:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46053:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v254; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46054:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v255; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46055:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v256.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46071:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v343; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46075:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v256.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46086:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v254; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46087:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v258; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46103:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v263; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46130:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v252; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46137:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v252; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46161:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v50.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46162:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v168; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46181:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v50.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46189:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v176 = rtx_equal_p( *( rtx *)( v175 + 8), recog_data_0.operand[0]); 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46198:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v50.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46214:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v50.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46215:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v48; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/insn-recog.c:46234:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v50.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_32/src/obj/insn-recog.o] Error 1
